# impler

./: .flake8  LICENSE  README.md  pyproject.toml
docs/: api.md
impl_pattern/: __init__.py  decorator.py  exceptions.py  main.py
impler/: __init__.py  main.py
tests/: conftest.py  test_impl_interface.py  test_impl_methods.py  test_impl_pattern.py  test_impler.py  test_input_validation.py
